--- a/src/app/components/rankings/ranking/ranking.component.html
+++ b/src/app/components/rankings/ranking/ranking.component.html
@@ -15,28 +15,29 @@
                 <li class="nav-item">
                     <a class="nav-link" id="players-tab" data-toggle="tab" href="#players" role="tab" aria-controls="players" aria-selected="false">Jugadores</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="phases-tab" data-toggle="tab" href="#phases" role="tab" aria-controls="phases" aria-selected="false">Fases</a>
+                </li>
             </ul>
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="groups" role="tabpanel" aria-labelledby="home-tab">
-                    <div id="accordion">
-                        <div class="card" *ngFor="let rg of rankingGroups; index as i">
-                            <div class="card-header" id="headingOne">
-                                <h5 class="mb-0">
-                                    <button class="btn btn-link" data-toggle="collapse" [attr.data-target]="'#RankingGroup' + i" aria-expanded="false" aria-controls="collapseOne">
-                                        {{rg.name}}
-                                    </button>
-                                </h5>
-                            </div>
-
-                            <div id="RankingGroup{{i}}" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div class="d-flex">
+                        <div class="row justify-content-md-center">
+                            <div class="card" *ngFor="let rg of rankingGroups; index as i">
                                 <div class="card-body">
-                                    <ul>
-                                        <li *ngFor="let c of rg.couples">{{c?.name}}</li>
+                                    <h5 class="card-title">{{rg.name}}</h5>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item py-1" *ngFor="let c of rg.couples">
+                                            <ul class="list-group align-items-center" *ngFor="let player of c.users">
+                                                <li class="list-group-item py-0"><small>{{player.playerName}}</small></li>
+                                            </ul>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                 </div>
                 <div class="tab-pane fade" id="couples" role="tabpanel" aria-labelledby="profile-tab">
                     <div class="d-flex flex-row-reverse">
@@ -87,10 +88,32 @@
                             </table>
                         </div>
                     </div>
+                </div>
+                <div class="tab-pane fade" id="phases" role="tabpanel" aria-labelledby="contact-tab">
+                    <div class="d-flex flex-row-reverse">
+                        <button class="btn btn-outline-primary" (click)="addPhase()">
+                          <i class="las la-plus-circle"></i>
+                        </button>
+                    </div>
+                    <ul class="list-group" *ngFor="let phase of phases">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                {{phase.name}}
+                                <span class="badge badge-light badge-pill">{{ phase.startDate | date:'dd/MM/yyyy' }}</span>
+                                <span class="badge badge-primary badge-pill">{{ phase.endDate | date:'dd/MM/yyyy'}}</span>
 
+                            </div>
+                            <button class="btn-circle">
+                                <i class="las la-edit"></i>
+                            </button>
+
+                        </li>
+                    </ul>
                 </div>
             </div>
+
         </div>
     </div>
     <app-couple-form #coupleForm (coupleAction)="refreshCouples($event)"></app-couple-form>
+    <app-phase-form #phaseForm (phaseAction)="refreshPhases($event)"></app-phase-form>
 </div>
