--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,10 +1,9 @@
-<nav class="navbar navbar-expand navbar-dark flex-column flex-md-column bg-dark">
-    <a class="navbar-brand" href="#">Ranking Padel</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <a class="navbar-brand" href="#">Ranking Padel</a>
+    <div class="collapse navbar-collapse justify-content-between" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item" routerLinkActive='active' *ngIf="user">
                 <a class="nav-link" routerLink="rankings">Rankings</a>
@@ -13,26 +12,17 @@
                 <a class="nav-link" routerLink="users">Usuarios</a>
             </li>
         </ul>
-
-        <span class="navbar-text">
-            <button class="btn btn-outline-light" routerLink='/auth/login' *ngIf="!user">
-                Login
-            </button>
-            <div class="btn-group" *ngIf="user">
-              <button type="button" class="btn btn-outline-dark btn-circle dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <img src="../../../../assets/img/profile.png" height="24px">
-              </button>
-              <div class="dropdown-menu dropdown-primary dropdown-menu-right" style="min-width: 250px;">
-                <div class="container mt3" >
-                  <p><b>Nombre:</b> {{user.userName}}</p>
-                  <p><b>Email:</b> {{user.email}}</p>
+        <ul class="navbar-nav">
+            <li class="nav-item dropdown" *ngIf="user">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="las la-user-circle"></i>{{user.userName}}
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <button class="dropdown-item" routerLink='/auth/user'>Profile</button>
+                    <div class="dropdown-divider"></div>
+                    <button class="dropdown-item" (click)="logout()">Cerrar Sesión</button>
                 </div>
-                <div class="dropdown-divider"></div>
-                <button class="dropdown-item" routerLink='/auth/user'>Profile</button>
-                <div class="dropdown-divider"></div>
-                <button class="dropdown-item" (click)="logout()">Cerrar Sesión</button>
-              </div>
-            </div>
-        </span>
+            </li>
+        </ul>
     </div>
 </nav>
